<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="30dp"
                android:stretchColumns="1,2,3"

                >

                <!--            Heading -->
                <TableRow android:background="@color/gray">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/check_col1"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/check_col2"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/check_col3"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/check_col4"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/info_icon" />

                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_helmet" />


                </TableRow>


            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:stretchColumns="1,2,3"

                >

                <!--            Heading -->
                <TableRow android:background="@color/lightgray"
                    >

                    <TextView
                        android:id="@+id/checkr_category"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="4"
                        android:gravity="left"
                        android:padding="8dp"
                        android:text="전기"
                        android:textColor="@color/gray"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </TableRow>


            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ch_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>